--- a/src/app/user-dasbord/pnr-status/pnr-status.component.html
+++ b/src/app/user-dasbord/pnr-status/pnr-status.component.html
@@ -69,9 +69,12 @@
                 <p class="card-text">You will find all your booking details, PNR Number and date of journey!</p>
               </div>
               <ul class="list-group list-group-flush">
-                <li class="list-group-item"><strong>Train No. & Train Name: </strong>
+                <li class="list-group-item"><strong>Train Name: </strong>
                     <input formControlName="trainName" matInput autocomplete="off">
                 </li>
+                <li class="list-group-item"><strong>Train No: </strong>
+                  <input formControlName="trainNo" matInput autocomplete="off">
+              </li>
                 <li class="list-group-item"><strong>Date Of Boarding: </strong>
                     <input formControlName="travelDate" matInput autocomplete="off">
 				</li>
