--- a/src/app/admin-nav/admin-nav.component.html
+++ b/src/app/admin-nav/admin-nav.component.html
@@ -31,7 +31,7 @@
             <a class="nav-link"><i class="material-icons">face</i> Passengers</a>
             <ul>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/admin/passenger" routerLinkActive="active">Passengers List </a>
+                <a class="nav-link" routerLink="/admin/passengerList" routerLinkActive="active">Passengers List </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" routerLink="/admin" routerLinkActive="active"> Booking Verification</a>
