--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -60,8 +60,8 @@ li{
 	position: absolute;
 	background-color: #d3d9df;
 	left: 25%;;
-	width: 100%;
-	height: 100vh;
+	/* width: fit-content; */
+	height: fit-content;
 }
 
 .dashboard-content{
