--- a/src/app/user-dasbord/notification-u/notification-u.component.html
+++ b/src/app/user-dasbord/notification-u/notification-u.component.html
@@ -8,7 +8,7 @@
       <li> 
 
 
-        <div  class="card" style="width: 50rem;">
+        <div id="notify_item._id" class="card" style="width: 50rem;">
           <div class="card-body">
             <h4 class="card-title"><i class="material-icons">extension</i> Notification</h4>
             <p class="card-text"><strong>item.userid</strong><br>item.dateOfCreation</p>
