--- a/src/app/user-dasbord/reservation/reservationcomponents/part1/part1.component.html
+++ b/src/app/user-dasbord/reservation/reservationcomponents/part1/part1.component.html
@@ -1,7 +1,7 @@
 <div id="errorAlert" class="alert alert-danger div-hidden" role="alert"></div>
 
 <div class="flex-parent">
-	<form [formGroup]="form" (ngSubmit)="submit()">
+	<form [formGroup]="form" (ngSubmit)="onsubmit()">
 
     <!-- Sign Up Form Starts Here -->
 
@@ -40,42 +40,53 @@
       </div>
       <br>
     </div>
-    <button type="button" id="searchTrains" class="btn btn-primary" routerLink="/user/booking/seating/details"><i
+    <button type="submit" id="searchTrains" class="btn btn-primary"><i
         class="material-icons" style="font-size: 1.2rem; line-height: 1em">search</i>
       <font style="font-size: 1.4rem; font-weight: 300;"> Search</font>
     </button>
   </form>
 
   <table class="table table-bordered" mat-table [dataSource]="dataSource" matSort class=""
-  style="box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);width:92%;background-color: #0000002e;">
+  style="box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);width:92%;background-color: #0000002e;margin-top:5%;margin-left:5%">
 
   <ng-container matColumnDef="id">
 	<th mat-header-cell *matHeaderCellDef mat-sort-header style="display: none;"> ID </th>
 	<td mat-cell *matCellDef="let train" style="display: none;"> {{train.id}} </td>
   </ng-container>
-  <ng-container matColumnDef="trainName">
+  <ng-container matColumnDef="trainNo">
 	<th mat-header-cell *matHeaderCellDef mat-sort-header> Train Number </th>
 	<td mat-cell *matCellDef="let train"> {{train.trainNo}} </td>
   </ng-container>
 
   <ng-container matColumnDef="trainName">
-	<th mat-header-cell *matHeaderCellDef mat-sort-header> Train Name </th>
-	<td mat-cell *matCellDef="let train"> {{train.trainName}} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Train Name </th>
+    <td mat-cell *matCellDef="let train"> {{train.trainName}} </td>
+    </ng-container>
+  
+  <ng-container matColumnDef="source">
+	<th mat-header-cell *matHeaderCellDef mat-sort-header> Train Source </th>
+	<td mat-cell *matCellDef="let train"> {{train.source}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="destination">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Train Destination </th>
+    <td mat-cell *matCellDef="let train"> {{train.destination}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="trainprice">
+    
+
+  <ng-container matColumnDef="ticketprice">
 	<th mat-header-cell *matHeaderCellDef mat-sort-header> Travel Price </th>
-	<td mat-cell *matCellDef="let train"> {{train.trainprice}} </td>
+	<td mat-cell *matCellDef="let train"> {{train.ticketprice}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="Print">
+  <ng-container matColumnDef="Select">
 	<th mat-header-cell *matHeaderCellDef mat-sort-header> Select </th>
 
-	<td mat-cell *matCellDef="let passenger">
+	<td mat-cell *matCellDef="let train">
 
 	  <button mat-icon-button aria-label="Example icon button with a vertical three dot icon" type="button"
-		mat-raised-button color="accent" matTooltip="Select" >
+		mat-raised-button color="accent" matTooltip="Select" (click)="loadTrainToSelect(train.id)">
 		<mat-icon>Select</mat-icon>
 	  </button>
 
