--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -35,7 +35,7 @@
 			    <br>
 
 			    <mat-form-field>
-				    <label for="aadhaar">aadhaar Number</label>
+				    <label for="aadhaar">Aadhaar Number</label>
 				    <input type="text" id="aadhaar" name="aadhaar"  formControlName="aadhaar" class="form-control csp" aria-describedby="aadhaarHelp" matInput placeholder="aadhaar Number">
 				    <small id="aadhaarHelp" class="form-text text-muted">Please enter your aadhaar Number.</small>
 				</mat-form-field>
