--- a/src/app/admin-nav/admin-nav.component.html
+++ b/src/app/admin-nav/admin-nav.component.html
@@ -33,17 +33,17 @@
               <li class="nav-item">
                 <a class="nav-link" routerLink="/admin/passengerList" routerLinkActive="active">Passengers List </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" routerLink="/admin" routerLinkActive="active"> Booking Verification</a>
-              </li>
+              </li> -->
               <!-- <li class="nav-item">
                 <a class="nav-link" routerLink="/user/seasonal" routerLinkActive="active"> Seasonal Offers</a>
               </li> -->
             </ul>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/admin/notifications" routerLinkActive="active"><i class="material-icons">notifications</i> Notifications</a>
-          </li>
+          </li> -->
       </ul>
     </div>
     
