--- a/src/app/navpanel/navpanel.component.html
+++ b/src/app/navpanel/navpanel.component.html
@@ -22,9 +22,23 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
+            <a class="nav-link"><i class="material-icons">terrain</i> Explore</a>
+            <ul>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/user/exploreindia" routerLinkActive="active"> Indian Tourism</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/user/exploremaharajas" routerLinkActive="active"> Maharajas Express</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/user/seasonal" routerLinkActive="active"> Seasonal Offers</a>
+              </li>
+            </ul>
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/user/notifications" routerLinkActive="active"><i class="material-icons">notifications</i> Notifications</a>
-          </li>
+          </li> -->
       </ul>
     </div>
     
