--- a/src/app/passenger/passenger.component.css
+++ b/src/app/passenger/passenger.component.css
@@ -80,6 +80,7 @@ a{
 	background-color: #d3d9df;
 	text-align: center;
 	width: 100%;
+	height: 27rem;
 }
 
 
@@ -91,7 +92,7 @@ a{
     display: flex;
 	
 	width: 100%;
-	height: 100%;
+	
 }
 
 
