--- a/src/app/passenger/passenger.component.html
+++ b/src/app/passenger/passenger.component.html
@@ -16,9 +16,9 @@
 
 
       </ng-container>
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Passenger id </th>
-        <td mat-cell *matCellDef="let passenger"> {{passenger.id}} </td>
+      <ng-container matColumnDef="pid">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Passenger pid </th>
+        <td mat-cell *matCellDef="let passenger"> {{passenger.pid}} </td>
       </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Passenger Name </th>
